--- a/index.html
+++ b/index.html
@@ -25,15 +25,18 @@
       <div class="searchResult">
         <h2 class="communityTitle"></h2>
         <div class="resultBox" id="resultBox1">
-          <ul class = "searchList1"><p class = "resulttitle">Crime counts & Resident counts</p></ul>
+          <ul class = "searchList1"><p>Crime counts & Resident counts</p></ul>
+          <!-- <div id="piechart"></div> -->
+          <!-- <div id="map"></div> -->
         </div>
         <div class="resultBox" id="resultBox2">
-          <ul class = "searchList2"><p class = "resulttitle">Crime counts by categery</p></ul>
+          <ul class = "searchList2"><p>Crime counts by categery</p></ul>
         </div>
+        <div id="layer-close"><a href="#" ><img src ="./img/close.svg"></a></div>
       </div>
     </div>
     <div class="container">
-      <div class = "totalTitle">Crime counts</div>
+      <div class = "totalTitle">Calgary crime counts</div>
       <div class = "total"></div>
       <div class = "totalDate">Jan.2019 - Sept.2019</div>
       <div class = "topview">
@@ -65,4 +68,9 @@
   </footer>
 </body>
 <script src="./app.js"></script>
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<!-- <script src="./map.js"></script> -->
+<!-- <script async defer
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIZ4R2Lop3_AnPsBWJTgAuOoKrKdI1Cpo&callback=initMap"> -->
+</script>
 </html>
